# AtmosphericTurbulenceSimul

./: .gitignore  00CORE-util_8c.html  00CORE_8c.html  00CORE_8h.html  00CORE_8h_source.html  AtmosphereModel_8c.html  AtmosphereModel_8c.js  AtmosphereModel_8h.html  AtmosphereModel_8h.js  AtmosphereModel_8h_source.html  AtmosphericTurbulence_8c.html  AtmosphericTurbulence_8c.js  AtmosphericTurbulence_8h.html  AtmosphericTurbulence_8h.js  AtmosphericTurbulence_8h_source.html  CLIcore_8c.html  CLIcore_8c.js  CLIcore_8h.html  CLIcore_8h.js  CLIcore_8h_source.html  CLIcore_8md.html  COREMOD__arith-util_8c.html  COREMOD__arith_8c.html  COREMOD__arith_8c.js  COREMOD__arith_8h.html  COREMOD__arith_8h.js  COREMOD__arith_8h_source.html  COREMOD__iofits-util_8c.html  COREMOD__iofits_8c.html  COREMOD__iofits_8c.js  COREMOD__iofits_8h.html  COREMOD__iofits_8h.js  COREMOD__iofits_8h_source.html  COREMOD__memory-util_8c.html  COREMOD__memory_8c.html  COREMOD__memory_8c.js  COREMOD__memory_8h.html  COREMOD__memory_8h.js  COREMOD__memory_8h_source.html  COREMOD__tools-util_8c.html  (+314 more)
autom4te.cache/: output.0  output.1  requests  traces.1
src/: CLIcore.c  CLIcore.h  Makefile  Makefile.am  Makefile.in  calc_flex.c  calc_flex.l  initmodules.c
src/.deps/: AtmosphericTurbulenceSimul-CLIcore.Po  AtmosphericTurbulenceSimul-calc_bison.Po  AtmosphericTurbulenceSimul-calc_flex.Po  AtmosphericTurbulenceSimul-initmodules.Po
src/00CORE/: Makefile  lib00core.la
src/00CORE/.deps/: 00CORE.Plo
src/AtmosphereModel/: AtmosphereModel.c  AtmosphereModel.h  Makefile  Makefile.am  Makefile.in  libatmospheremodel.la
src/AtmosphereModel/.deps/: AtmosphereModel.Plo
src/AtmosphericTurbulence/: AtmosphericTurbulence.c  AtmosphericTurbulence.h  Makefile  Makefile.am  Makefile.in  libatmosphericturbulence.la  libatmturb.la
src/AtmosphericTurbulence/.deps/: AtmosphericTurbulence.Plo
src/AtmosphericTurbulence/doc/: AtmosphericTurbulence.html  AtmosphericTurbulence.md
src/AtmosphericTurbulence/scripts/: .syncscripts.swp  mkHVturbprof  runturb  syncscripts
src/COREMOD_arith/: COREMOD_arith.c  COREMOD_arith.h  Makefile  libcoremodarith.la
src/COREMOD_arith/.deps/: COREMOD_arith.Plo
src/COREMOD_iofits/: COREMOD_iofits.c  COREMOD_iofits.h  Makefile  libcoremodiofits.la
src/COREMOD_iofits/.deps/: COREMOD_iofits.Plo
src/COREMOD_memory/: COREMOD_memory.c  COREMOD_memory.h  Makefile  libcoremodmemory.la
src/COREMOD_tools/: COREMOD_tools.c  COREMOD_tools.h  Makefile  libcoremodtools.la
src/COREMOD_tools/.deps/: COREMOD_tools.Plo
src/OpticsMaterials/: Makefile  Makefile.am  Makefile.in  OpticsMaterials.c  libopticsmaterials.la
src/OpticsMaterials/.deps/: OpticsMaterials.Plo
src/WFpropagate/: Makefile  WFpropagate.c  libwfpropagate.la
src/WFpropagate/.deps/: WFpropagate.Plo
src/cudacomp/: Makefile.am  Makefile.in  cudacomp.c
src/fft/: Makefile  fft.c  libfft.la
src/fft/.deps/: fft.Plo
src/image_basic/: Makefile  image_basic.c  image_basic.h  libimagebasic.la
src/image_basic/.deps/: image_basic.Plo
src/image_filter/: Makefile  libimagefilter.la
src/image_filter/.deps/: image_filter.Plo
src/image_format/: Makefile  Makefile.am  Makefile.in  image_format.c  image_format.h  image_format.lo  libimageformat.la
src/image_format/.deps/: image_format.Plo
src/image_format/.libs/: libimageformat.la
src/image_gen/: Makefile  image_gen.c  image_gen.h  libimagegen.la
src/image_gen/.deps/: image_gen.Plo
src/info/: Makefile  info.c  info.h  libinfo.la
src/kdtree/: Makefile  libkdtree.la
src/linopt_imtools/: Makefile  liblinoptimtools.la  linopt_imtools.c  linopt_imtools.h
src/linopt_imtools/.deps/: linopt_imtools.Plo
src/psf/: Makefile  Makefile.am  Makefile.in  libpsf.la  psf.c  psf.h
src/psf/.deps/: psf.Plo
src/statistic/: Makefile  libstatistic.la  statistic.c  statistic.h
src/statistic/.deps/: statistic.Plo
(+147 files in other folders)
